[gd_scene load_steps=11 format=3 uid="uid://cnx37so8k7ys5"]

[ext_resource type="Script" path="res://Results.gd" id="1_hc43e"]
[ext_resource type="AudioStream" uid="uid://cx8jy18073t73" path="res://sounds/textsfx.ogg" id="3_3qfy3"]
[ext_resource type="FontFile" uid="uid://jxerprayhk57" path="res://NintendoDSBIOS.ttf" id="3_bynd7"]
[ext_resource type="AudioStream" uid="uid://bdwexasawas40" path="res://sounds/player sounds/uppercut.mp3" id="4_swdnh"]
[ext_resource type="AudioStream" uid="uid://cglhrsew18qcu" path="res://music/results test.ogg" id="5_teakf"]

[sub_resource type="Animation" id="Animation_fbpbo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Percentage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Percentage:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(29, 24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SkipText:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(92, 197)]
}

[sub_resource type="Animation" id="Animation_wm1ue"]
resource_name = "ShowResults"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Percentage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(9.18958, 0.353553, 0.353553),
"update": 0,
"values": [Vector2(20, 20), Vector2(4.5, 4.5), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Percentage:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(9.18958, 0.353553, 0.353553),
"update": 0,
"values": [Vector2(-71, 24), Vector2(83, 24), Vector2(78, 24)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_swdnh")
}],
"times": PackedFloat32Array(0.9)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rank/Text:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5x55s"]
_data = {
"RESET": SubResource("Animation_fbpbo"),
"ShowResults": SubResource("Animation_wm1ue")
}

[sub_resource type="Gradient" id="Gradient_qd5w8"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36wpk"]
bg_color = Color(0, 0, 0, 0.65098)

[node name="Results" type="Node2D"]
script = ExtResource("1_hc43e")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 192.0

[node name="RatingScreen" type="Sprite2D" parent="."]
position = Vector2(128, 232)
scale = Vector2(0.576923, 0.576923)

[node name="Label" type="Label" parent="."]
offset_left = 56.0
offset_top = 112.0
offset_right = 200.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bynd7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]

[node name="Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3qfy3")

[node name="Dim" type="ColorRect" parent="."]
offset_right = 256.0
offset_bottom = 192.0
color = Color(0, 0, 0, 0)

[node name="TimeToShowResults" type="Timer" parent="."]

[node name="Percentage" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29, 24)
pivot_offset = Vector2(0.05, 0.05)
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_bynd7")
theme_override_font_sizes/font_size = 16
text = "90%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5x55s")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(128, 64)
emitting = false
amount = 50
lifetime = 3.1
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 83.48
direction = Vector2(0, -2)
gravity = Vector2(0, 6)
initial_velocity_min = 51.67
initial_velocity_max = 311.11
angular_velocity_min = 25.17
angular_velocity_max = 720.0
color_ramp = SubResource("Gradient_qd5w8")

[node name="SkipText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = 197.0
offset_right = 164.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("3_bynd7")
theme_override_styles/normal = SubResource("StyleBoxFlat_36wpk")
text = "Press ENTER to go back to the menu."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_teakf")
volume_db = -5.621
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimeToShowResults" to="." method="_on_time_to_show_results_timeout"]
